--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
       "src": "main.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "15mg"
+        "maxLambdaSize": "15mg",
+        "runtime": "python3.10.4"
       }
     }
   ],
